--- a/Smart Home/Smart Home.csproj
+++ b/Smart Home/Smart Home.csproj
@@ -161,6 +161,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Connextion\MyConnextion.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
