--- a/Smart Home/Smart Home.csproj
+++ b/Smart Home/Smart Home.csproj
@@ -161,6 +161,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\Appartement.cs" />
+    <Compile Include="Classes\Chambre.cs" />
+    <Compile Include="Classes\Furniture.cs" />
+    <Compile Include="Classes\User.cs" />
     <Compile Include="Connextion\MyConnextion.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -208,7 +212,6 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Classes\" />
     <Folder Include="Services\" />
   </ItemGroup>
   <ItemGroup>
