--- a/Smart Home/Smart Home.csproj
+++ b/Smart Home/Smart Home.csproj
@@ -162,11 +162,23 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Connextion\MyConnextion.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="forms\ApartementForm.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="forms\ApartementForm.Designer.cs">
+      <DependentUpon>ApartementForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="forms\ChambreForm.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="forms\ChambreForm.Designer.cs">
+      <DependentUpon>ChambreForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="forms\Dashboard.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="forms\Dashboard.Designer.cs">
+      <DependentUpon>Dashboard.cs</DependentUpon>
     </Compile>
     <Compile Include="forms\LoginForm.cs">
       <SubType>Form</SubType>
@@ -174,10 +186,28 @@
     <Compile Include="forms\LoginForm.Designer.cs">
       <DependentUpon>LoginForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="forms\SalonMaisonForm.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="forms\SalonMaisonForm.Designer.cs">
+      <DependentUpon>SalonMaisonForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="forms\ApartementForm.resx">
+      <DependentUpon>ApartementForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="forms\ChambreForm.resx">
+      <DependentUpon>ChambreForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="forms\Dashboard.resx">
+      <DependentUpon>Dashboard.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="forms\LoginForm.resx">
       <DependentUpon>LoginForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="forms\SalonMaisonForm.resx">
+      <DependentUpon>SalonMaisonForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
