--- a/Smart Home/Smart Home.csproj
+++ b/Smart Home/Smart Home.csproj
@@ -197,6 +197,12 @@
     <Compile Include="forms\SalonMaisonForm.Designer.cs">
       <DependentUpon>SalonMaisonForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="forms\ToiletteForm.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="forms\ToiletteForm.Designer.cs">
+      <DependentUpon>ToiletteForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="forms\ApartementForm.resx">
@@ -213,6 +219,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="forms\SalonMaisonForm.resx">
       <DependentUpon>SalonMaisonForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="forms\ToiletteForm.resx">
+      <DependentUpon>ToiletteForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
