--- a/Smart Home/Smart Home.csproj
+++ b/Smart Home/Smart Home.csproj
@@ -167,6 +167,24 @@
     <Compile Include="Classes\Objet.cs" />
     <Compile Include="Classes\User.cs" />
     <Compile Include="Connextion\MyConnextion.cs" />
+    <Compile Include="forms\AddApartementForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="forms\AddApartementForm.Designer.cs">
+      <DependentUpon>AddApartementForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="forms\AddChambreForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="forms\AddChambreForm.Designer.cs">
+      <DependentUpon>AddChambreForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="forms\AddUserForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="forms\AddUserForm.Designer.cs">
+      <DependentUpon>AddUserForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="forms\ApartementForm.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -199,6 +217,18 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\AppartementService.cs" />
+    <Compile Include="Services\ChambreService.cs" />
+    <Compile Include="Services\UserService.cs" />
+    <EmbeddedResource Include="forms\AddApartementForm.resx">
+      <DependentUpon>AddApartementForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="forms\AddChambreForm.resx">
+      <DependentUpon>AddChambreForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="forms\AddUserForm.resx">
+      <DependentUpon>AddUserForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="forms\ApartementForm.resx">
       <DependentUpon>ApartementForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -242,9 +272,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Services\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="Content\font-awesome.css" />
     <Content Include="Content\font-awesome.min.css" />
